lexi/syntax.txt
expr: {
	`KEYWORD:var IDENTIFIER SET expr
	`comp-expr ((KEYWORD:AND|KEYWORD:OR) comp-expr)
}

comp-expr: {
	`NOT
	`arith-expr ((EQ|LT|GT|LTE|GTE) arith-expr)*
}

arith-expr: `term ((PLUS|MINUS) term)*

term: `factor ((MUL|DIV) factor)*

power: `call (POW factor)*

tetration: `expr (TET power)*

call: {
	`atom (ARRW expr (COMMA expr)*)
	`atom NSET
}

atom: {
	`INT|FLOAT|STRING|IDENTIFIER
	`LPAREN expr RPAREN
	`if-expr
	`while-expr
	`func-def
}

factor: {
	`(PLUS|MINUS) atom
	`tetration
}

if-expr: {
	`KEYWORD:if expr SET expr
	(KEYWORD:elif expr SET expr)*
	(KEYWORD:else set expr)?
}

while-expr: {
	`KEYWORD:while expr SET expr

func-def: {
	`KEYWORD:fun IDENTIFIER?
	(LPAREN (IDENTIFIER (COMMA IDENTIFIER)*)? RPAREN)?
	SET expr
}
